# AuraRing

./: .gitignore  LICENSE  README.md
cad/ring/: ring_20.STL  ring_22.STL  ring_inset_20.STL  ring_inset_22.STL  tracking_adapter_20.STL  tracking_adapter_22.STL
cad/wristband/: tracking_adapter.STL  wristband.STL
cring/: .gitignore
cring/mag-inverse/: .gitignore  CMakeLists.txt  file_utils.cpp  file_utils.h  hand_models.cpp  hand_models.h  mag-inverse.sln  mag_models.cpp  mag_models.h  settings.h  utils.cpp  utils.h
cring/mag-inverse/cmake/: FindCeres.cmake
cring/mag-inverse/global_model/: global_model.cpp  global_model.vcxproj  global_model.vcxproj.filters
cring/mag-inverse/mag-inverse/: mag-inverse.cpp  mag-inverse.vcxproj  mag-inverse.vcxproj.filters
cring/mag-inverse/mag-runtime/: CMakeLists.txt  comms.cpp  comms.h  mag-runtime.vcxproj  mag-runtime.vcxproj.filters  runtime.cpp
firmware/: .gitignore
firmware/AuraRing-Rx-bottom/: .ccsproject  SPI.c  clock.c  lnk_msp430fr2422.cmd  main.c  timer.c  uart.h
firmware/AuraRing-Rx-bottom/targetConfigs/: MSP430FR2422.ccxml
firmware/AuraRing-Rx-top/: .ccsproject  .gitignore  SPI.h  clock.h  main.c  timer.h  uart.c
pcb/ring_tx/: ring_v3.BomDoc  ring_v3.PcbDoc  ring_v3.PrjPcb  ring_v3.PrjPcbStructure  ring_v3.SchDoc
pcb/ring_tx/__Previews/: ring_v3.SchDocPreview
pcb/wristBand_rx/ring_rx_v3/: ring_rx_v3.PrjMbd  ring_rx_v3.PrjMbdStructure  ring_rx_v3_multi.MbaDoc  ring_rx_v3_multi.MbsDoc
pcb/wristBand_rx/ring_rx_v3_controller/: coil_processing.Harness  (+12 more)
pyring/: .gitignore  settings.py  view_raw.py
(+20 files in other folders)
